# pytest-mypy-plugins-shim

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
pytest_mypy_plugin_shim/: __init__.py
pytest_mypy_plugins_shim/: __init__.py
