[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pytest-mypy-plugins-shim"
version = "0.2.0"
description = "Substitute for \"pytest-mypy-plugins\" for Python implementations which aren't supported by mypy."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/python-coincidence/pytest-mypy-plugins-shim"
"Issue Tracker" = "https://github.com/python-coincidence/pytest-mypy-plugins-shim/issues"
"Source Code" = "https://github.com/python-coincidence/pytest-mypy-plugins-shim"

[tool.importcheck]
always = [ "pytest_mypy_plugins_shim",]

[tool.whey]
base-classifiers = []
python-versions = [ "3.6", "3.7",]
python-implementations = [ "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pytest_mypy_plugins_shim"

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[project.entry-points.pytest11]
pytest-mypy-plugins-shim = "pytest_mypy_plugins_shim"
