[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pytest-mypy-plugins-shim"
version = "0.2.0"
description = "Substitute for \"pytest-mypy-plugins\" for Python implementations which aren't supported by mypy."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/python-coincidence/pytest-mypy-plugins-shim"
"Issue Tracker" = "https://github.com/python-coincidence/pytest-mypy-plugins-shim/issues"
"Source Code" = "https://github.com/python-coincidence/pytest-mypy-plugins-shim"

[project.entry-points.pytest11]
pytest-mypy-plugins-shim = "pytest_mypy_plugins_shim"

[tool.importcheck]
always = [ "pytest_mypy_plugins_shim",]

[tool.whey]
base-classifiers = []
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pytest_mypy_plugins_shim"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10
